==> hso-esk/emb6/target/mcu/msp430x5xx/msp430x5xx.c <==
#include "target.h"
#include <msp430.h>
#include "targetconfig.h"
#include "target.h"
#include "bsp.h"
#include "io.h"
#include "int.h"
#include "lcd.h"
#include "mcu.h"
#include "led.h"
#include "key.h"
#include "spi.h"
#include "tmr.h"
#include "uart.h"
#include "rtc.h"
#include "infoflash.h"
#include "lib_tmr.h"
#define TARGET_CFG_ARG_CHK_EN                   ( 1u )
#define TARGET_CFG_SYSTICK_RESOLUTION           (clock_time_t)( 1000u )
#define TARGET_CFG_SYSTICK_SCALER               (clock_time_t)(    2u )

static void _hal_uartInit(void)
{
    char *p_line = "\r\n\r\n========== BEGIN ===========\r\n\r\n";

    uart_init();
    uart_config(E_UART_SEL_UART1, 115200, NULL);
    uart_send(E_UART_SEL_UART1, p_line, strlen(p_line));
}

int8_t hal_init(void)
{
    int i = 0;


    hal_enterCritical();
    {
        /*
         * Initialize peripherals: UART, SPI, LED,...
         * As BSP implementation is common for all platform at the time of writing,
         * platform-specific modules shall be initialized in this function
         */

        /* initialize IO */
        io_init();

        /* initialize system clock */
        mcu_sysClockInit( MCU_SYSCLK_4MHZ);

        /* initialize interrupts */
        int_init();

        /* initialize timer */
        tmr_init();

        /* initialize LEDs */
        led_init();

        /* initialize keys */
        key_init();

        /* initialize RF SPI */
#if (TARGET_CONFIG_RF == TRUE)
        spi_rfInit(1);
#endif

        /* initialize LCD */
#if (TARGET_CONFIG_LCD == TRUE)
        spi_lcdInit(MCU_SYSCLK_8MHZ);
        lcd_init();
#endif

        /* initialize UART */
        _hal_uartInit();

        /* initialize info flash */
        infoflash_init();

        /* initialize RTC */
        rtc_init();

        /* Initialize System tick timer */
        _hal_systick();

        /* Enable global interrupt */
        _BIS_SR(GIE);

        /* delay */
        for( i = 0; i < TARGET_CONFIG_INIT_DELAY_NUM; i++ )
            __delay_cycles( TARGET_CONFIG_INIT_DELAY_CYCLES );
    }
    hal_exitCritical();

    /*
     * Initialize HAL local variables
     */
    hal_rfspi = 0;
    hal_ticks = 0;
    return 1;
}

void hal_ledOn(uint16_t ui_led)
{
    switch (ui_led) {
#if TARGET_CONFIG_LED1
        case E_BSP_LED_ORANGE:
            led_set(E_LED_1);
            break;
#endif
#if TARGET_CONFIG_LED2
        case E_BSP_LED_YELLOW:
            led_set(E_LED_2);
            break;
#endif
#if TARGET_CONFIG_LED3
        case E_BSP_LED_GREEN:
            led_set(E_LED_3);
            break;
#endif
#if TARGET_CONFIG_LED4
        case E_BSP_LED_RED:
            led_set(E_LED_4);
            break;
#endif
        default:
            break;
    }
}

void hal_ledOff(uint16_t ui_led)
{
    switch (ui_led) {
#if TARGET_CONFIG_LED1
        case E_BSP_LED_ORANGE:
            led_clear(E_LED_1);
            break;
#endif
#if TARGET_CONFIG_LED2
        case E_BSP_LED_YELLOW:
            led_clear(E_LED_2);
            break;
#endif
#if TARGET_CONFIG_LED3
        case E_BSP_LED_GREEN:
            led_clear(E_LED_3);
            break;
#endif
#if TARGET_CONFIG_LED4
        case E_BSP_LED_RED:
            led_clear(E_LED_4);
            break;
#endif
        default:
            break;
    }
}

void hal_delay_us(uint32_t ul_delay)
{
    /*
     * Note(s)
     *
     * hal_delay_us() is only called by emb6.c to make a delay multiple of 500us,
     * which is equivalent to 1 systick
     */
    uint32_t tick_stop;


    hal_enterCritical();
    tick_stop  = hal_ticks;
    tick_stop += ul_delay / 500;
    hal_exitCritical();
    while (tick_stop > hal_ticks) {
        /* do nothing */
    }
}

void *hal_spiInit(void)
{
#if (TARGET_CONFIG_RF == TRUE)
    return &hal_rfspi;
#else
    return NULL;
#endif
}

uint8_t hal_spiSlaveSel(void *p_spi, bool action)
{
#if TARGET_CFG_ARG_CHK_EN
    if (p_spi == NULL) {
        return 0;
    }
#endif


    if (action == TRUE) {
        spi_rfSelect();
    } else {
        spi_rfDeselect();
    }
    return 1;
}

uint8_t hal_spiRead(uint8_t *p_data, uint16_t i_len)
{
    uint8_t ret;


#if TARGET_CFG_ARG_CHK_EN
    if ((p_data == NULL) ||
        (i_len == 0)) {
        return 0;
    }
#endif

    ret = spi_rfRead(p_data, i_len);
    return ret;
}

void hal_spiWrite(uint8_t *p_data, uint16_t i_len)
{
#if TARGET_CFG_ARG_CHK_EN
    if ((p_data == NULL) ||
        (i_len == 0)) {
        return;
    }
#endif

    spi_rfWrite(p_data, i_len);
}
